--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,13 @@
-#server:
-#  port: 8888
+
+spring:
+  profiles:
+    active: dev
+debug: true
+---
+server:
+  port: 8888
+spring:
+  profiles: prod
 user:
   userName: tin@qq.com
   age: ${random.int(12,40)}
@@ -8,6 +16,22 @@ user:
     - reading
     - programming
     - wathing movies
+  dog:
+    name: ${master.name:slei}_xiongshi
+    age: 3
+---
+server:
+  port: 9999
+spring:
+  profiles: dev
+user:
+  userName: tin@qq.com
+  age: ${random.int(12,40)}
+  city: changsha
+  hobbies:
+  - reading
+  - programming
+  - wathing movies
   dog:
     name: ${master.name:slei}_xiongshi
     age: 3
